attempt at fixing ios overflow

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -26,7 +26,7 @@
 html {
 	// This defines what 1rem is
 	font-size: 62.5%;
-	overflow: hidden;
+	// overflow: hidden;
 }
 
 body {
@@ -34,7 +34,7 @@ body {
 	font-family: $font;
 	background-color: #F9F9F9;
 	height: 100vh;
-	overflow: hidden;
+	// overflow: hidden;
 }
 
 
